# scope-flux-klein

./: .gitignore  README.md  pyproject.toml
src/scope_flux_klein/: __init__.py  pipeline.py  schema.py
src/scope_flux_klein/model/: inference.py
