[project]
name = "scope-flux-klein"
version = "0.1.0"
description = "Real-time image generation using FLUX.2-klein-4B for Daydream Scope"
requires-python = ">=3.12"
dependencies = [
    "diffusers @ git+https://github.com/huggingface/diffusers.git@74654df203f6c306c81fd055da0e10a9b3f86fac",
]

[project.entry-points."scope"]
scope_flux_klein = "scope_flux_klein"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/scope_flux_klein"]
